// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ExampleComponent should call updateStream method 1`] = `
<ui-example
  data$={[Function Observable]}
  service={[Function Object]}
>
  <span>
    new Data
  </span><button>
    Set 'fromClick'
  </button>
</ui-example>
`;

exports[`Component: ExampleComponent should match snapshot with initial state 1`] = `
<ui-example
  data$={[Function Observable]}
  service={[Function Object]}
>
  <span>
    new stream
  </span><button>
    Set 'fromClick'
  </button>
</ui-example>
`;

exports[`Component: ExampleComponent should set the \`fromClick\` value in stream 1`] = `
<ui-example
  data$={[Function Observable]}
  service={[Function Object]}
>
  <span>
    fromClick
  </span><button>
    Set 'fromClick'
  </button>
</ui-example>
`;
